--- a/index.html
+++ b/index.html
@@ -23,89 +23,171 @@
 	<meta name="msapplication-TileImage" content="/favicon-144.png">
 	<meta name="msapplication-config" content="/browserconfig.xml">
 
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<title>Raspim</title>
 
-    <title>Raspim</title>
+	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="jquery-time-slider/jquery.time.slider.css" />
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		body {
+			padding-top: 70px;
+			/* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+		}
+		/*
+		#controls, #images{
+		box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		}
 
-<link rel="stylesheet" type="text/css" href="jquery-time-slider/jquery.time.slider.css" />
+		#wrapper {
+		width: 500px;
+		border: 1px solid black;
+		position:relative;
+		}
 
-    <!-- Custom CSS -->
-    <style>
-    body {
-        padding-top: 70px;
-        /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+		#controls {
+		width:50%;
+		border: 1px solid red;
+		display:inline-block;
+		}
+
+		#images {
+		width:50%;
+		border: 1px solid green;
+		display:inline-block;
+		}
+		*/
+
+    .navbar-nav{
+        margin-top: 5px;
+        display: table;
+        table-layout: fixed;
+        float:none;
+	width: 50%;
     }
-/*
-#controls, #images{
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
+
+a.anchor {
+    display: block;
+    position: relative;
+    top: -250px;
+    visibility: hidden;
 }
 
-#wrapper {
-    width: 500px;
-    border: 1px solid black;
-    position:relative;
+.zoom, .hide_show{
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
+	</style>
 
-#controls {
-    width:50%;
-    border: 1px solid red;
-    display:inline-block;
-}
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 
-#images {
-    width:50%;
-    border: 1px solid green;
-    display:inline-block;
-}
-*/
-    </style>
+	<!-- jQuery Version 1.11.1 -->
+	<script src="js/jquery.js"></script>
+	<script type="text/javascript" src="jquery-time-slider/jquery.time.slider.js"></script>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<!-- Bootstrap Core JavaScript -->
+	<script src="js/bootstrap.min.js"></script>
 
-    <!-- jQuery Version 1.11.1 -->
-    <script src="js/jquery.js"></script>
-<script type="text/javascript" src="jquery-time-slider/jquery.time.slider.js"></script>
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<script language="javascript" type="text/javascript">
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+	var pos = 7;
+	var play = 0;
 
+	$(document).ready(function()
+	{
 
-<script language="javascript" type="text/javascript">
-$(document).ready(function()
-{
-	$('div').on("click", ".zoom", function () {
-		$(this).toggleClass( "col-md-9" );
-		$(this).toggleClass( "col-md-4" );
-		$('body').animate({
-			scrollTop: $(this).offset().top - 100
-		}, 0);
+		var prefixes = ["wstar_bsratio", "wstar", "zblcldif", "zsfclcldif", "hwcrit", "sfcsunpct"];
+		for(var prefix in prefixes) {
+			var day = [".curr.", ".curr+1."];
+			for(i = 0; i < 2; i ++) {
+				var theDiv = document.getElementById("images" + i);
+				var divname = prefix + '_' + day[i];
+				theDiv.innerHTML += '<div class="zoom hide_show col-md-4" id="'+ divname + '"></div>';
+				theDiv = document.getElementById(divname);
+				for(x=7; x < 20; x++) {
+					var y = x
+					if(x < 10)
+						y = "0"+ x;
+					filename = prefixes[prefix] + day[i]+ y + "00lst.d2.png";
+					content = "<img src='images/" + filename + "' alt='0700' id='image_" + prefix + "_" + x + "_" + i + "_image' style='width:100%;height:100%;'>";
+					theDiv.innerHTML += content;
+				}
+			}
+		}
+		$("img[id$='_0_image']").hide();
+		$("img[id$='_1_image']").hide();
+		$("img[id$='_" + pos + "_0_image']").show();
+		$("img[id$='_" + pos + "_1_image']").show();
+		setTimeout(playing, 1);
 
-	});
-});
+		var slider = $( "#slider").slider({
+			min: 7,
+			max: 19,
+			range: "min",
+			value: pos,
+			slide: function( event, ui ) {
+				play = 0;
+				set_pos(ui.value);
+			}
+		});
 
-		function play_images() {
+		$('div').on("click", ".zoom", function () {
+				if($(this).hasClass("col-md-9")) {
+					$( ".zoom" ).removeClass( "col-md-9" ).addClass( "col-md-4" );
+					$( ".hide_show" ).show();
+				}
+				else {
+					$( ".zoom" ).removeClass( "col-md-9" ).addClass( "col-md-4" );
+					$( ".hide_show" ).hide();
+					$( this ).show();
+					$(this).removeClass( "col-md-4" ).addClass( "col-md-9" );
+				}
+				$('html, body').animate({
+					scrollTop: $(this).offset().top - 100
+				}, 0);
+		});
+
+		$("#playButton").click(function() {
 			if(play==1)
 				play=0;
 			else 
 				play = 1;
-		}
-		function pause_images() {
+		});
+		$("#pauseButton").click(function() {
 			play = 0;
+		});
+
+	});
+	</script>
+</head>
+
+<body>
+	<script language="javascript" type="text/javascript">
+		function set_pos(new_pos) {
+			pos = new_pos;
+			$("img[id$='_0_image']").hide();
+			$("img[id$='_1_image']").hide();
+			$("img[id$='_" + pos + "_0_image']").show();
+			$("img[id$='_" + pos + "_1_image']").show();
+			$("#slider").slider("value", pos);
+			$("#timedisplay").val(pos + ":00");
 		}
 		function playing() {
 			if(play == 0) {
@@ -117,84 +199,60 @@ $(document).ready(function()
 				next = 7;
 				play = 0;
 			}
-			document.getElementById("image_" + next).style.display="block";
-			document.getElementById("image_" + pos).style.display="none";
-			pos = next;
+			set_pos(next);
 			setTimeout(playing, 1000);
 		}
-
-		var pos = 7;
-		var play = 0;
-		function page_load() {
-			/*var arr = ["list", "items", "here"];
-			$("div").append("<ul></ul>");
-			for(var i in arr) {
-			    var li = "<li>";
-			    $("ul").append(li.concat(arr[i]))
-			}*/
-
-			var prefixes = ["wstar_bsratio", "wstar", "zblcldif", "zsfclcldif", "hwcrit", "sfcsunpct"];
-			for(var prefix in prefixes) {
-				var day = [".curr.", ".curr+1."];
-				for(i = 0; i < 2; i ++) {
-					var theDiv = document.getElementById("images" + i);
-					var divname = prefix + '_' + day[i];
-					theDiv.innerHTML += '<div class="zoom col-md-4" id="'+ divname + '"></div>';
-					theDiv = document.getElementById(divname);
-					for(x=7; x < 20; x++) {
-						var y = x
-						if(x < 10)
-							y = "0"+ x;
-						filename = prefixes[prefix] + day[i]+ y + "00lst.d2.png";
-						content = "<img src='images/" + filename + "' alt='0700' id='image_" + prefix + "_" + x + "_" + i + "' style='display:none;width:100%;height:100%;'>";
-						theDiv.innerHTML += content;
-					}
-					document.getElementById("image_" + prefix + "_" + pos + "_" + i).style.display="block";
-				}
-			}
-			setTimeout(playing, 1);
-		}
 	</script>
-</head>
+	<!-- Navigation -->
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header" style="width:100%">
+				<a class="navbar-brand hidden-xs" href="#heute">Heute</a>
+				<a class="navbar-brand hidden-xs" href="#morgen">Morgen</a>
 
-<body onload="page_load();">
+				<div class="navbar-brand">
+					<div id="controls" class="col-xs"> 
+						<button id="playButton" type="button" class="btn btn-default btn-xs">
+							<span class="glyphicon glyphicon-play"></span>
+						</button>
+						<button id="pauseButton" type="button" class="btn btn-default btn-xs">
+							<span class="glyphicon glyphicon-pause"></span>
+						</button>
+					</div>
+				</div>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#heute">Heute</a>
-                <a class="navbar-brand" href="#morgen">Morgen</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li>
-                        <a href="#">Services</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>-->
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+				<div style="width:10%; float:left; margin:10px;" class="input-group">
+					<span class="input-group-addon"><i class="glyphicon glyphicon-time"></i></span>
+					<input id="timedisplay" type="text" name="" class="form-control" placeholder="07:00" readonly="">
+				</div>
+
+				<div style="width:50%" class="navbar-brand navbar-nav" id="timeslider">
+					<div class="col-xs" id="slider"></div>
+				</div>
+			</div>
+			<!-- Collect the nav links, forms, and other content for toggling 
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav">
+				<li>
+				<a href="#">About</a>
+				</li>
+				<li>
+				<a href="#">Services</a>
+				</li>
+				<li>
+				<a href="#">Contact</a>
+				</li>
+				</ul>
+			</div>-->
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container -->
+	</nav>
 
     <div class="container">
       <div class="row row-offcanvas row-offcanvas-left">
-        
+
         <!-- main area 
         <div class="col-xs-12 col-sm-9 text-center">
 		<div id="controls" class="col-xs"> 
@@ -208,11 +266,13 @@ $(document).ready(function()
 	</div>
 -->
 
-	<h2 id="heute">Heute</h2>
+	<a class="anchor" id="heute"></a>
+	<h2 class="hide_show" "id="heute">Heute</h2>
 	<div class="row" id="images0"> 
 	</div>
 
-	<h2 id="morgen">Morgen</h2>
+	<a class="anchor" id="morgen"></a>
+	<h2 class="hide_show" id="morgen">Morgen</h2>
 	<div class="row" id="images1"> 
 	</div>
           
